--- a/web/public/webseite.html
+++ b/web/public/webseite.html
@@ -1,13 +1,13 @@
-<!-- <link rel="stylesheet" href="/styles.css" /> -->
+<link rel="stylesheet" href="/styles.css" />
 
-<!-- <nav>
+<nav>
   <h1><a href="webseite.html">Meine erste Webseite</a></h1>
   <ul>
     <li><a href="hobbies.html">Meine Hobbies</a></li>
     <li><a href="faecher.html">Meine Lieblingsfächer</a></li>
     <li><a href="stundenplan.html">Mein Stundenplan</a></li>
   </ul>
-</nav> -->
+</nav>
 
 <main>
   <h1>Herzlich Willkommen!</h1>
