--- a/web/public/hobbies.html
+++ b/web/public/hobbies.html
@@ -1,9 +1,27 @@
+<!-- <link rel="stylesheet" href="/styles.css" /> -->
+
+<nav>
+  <h1><a href="webseite.html">Meine erste Webseite</a></h1>
+  <ul>
+    <li><a href="hobbies.html">Meine Hobbies</a></li>
+    <li><a href="faecher.html">Meine Lieblingsfächer</a></li>
+    <li><a href="stundenplan.html">Mein Stundenplan</a></li>
+  </ul>
+</nav>
+
 <h1>Meine Hobbies</h1>
 
-<p><img src="gitarre.jpeg" alt="Gitarre" /></p>
-
-<ul>
-  <li>Gitarre spielen</li>
-  <li>Radfahren</li>
-  <li>Skifahren</li>
+<ul class="hobbies">
+  <li>
+    <img src="gitarre.jpeg" alt="Gitarre" />
+    <p>Gitarre spielen</p>
+  </li>
+  <li>
+    <img src="skifahren.jpeg" alt="Skifahren" />
+    <p>Skifahren</p>
+  </li>
+  <li>
+    <img src="bike.jpeg" alt="E-Bike" />
+    <p>Radfahren</p>
+  </li>
 </ul>
