--- a/web/public/webseite.html
+++ b/web/public/webseite.html
@@ -3,9 +3,8 @@
 <nav>
   <h1><a href="webseite.html">Meine erste Webseite</a></h1>
   <ul>
-    <li><a href="hobbies.html">Meine Hobbies</a></li>
-    <li><a href="faecher.html">Meine Lieblingsfächer</a></li>
-    <li><a href="stundenplan.html">Mein Stundenplan</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="stundenplan.html">Stundenplan</a></li>
   </ul>
 </nav>
 
