--- a/web/public/hobbies.html
+++ b/web/public/hobbies.html
@@ -1,4 +1,4 @@
-<!-- <link rel="stylesheet" href="/styles.css" /> -->
+<link rel="stylesheet" href="/styles.css" />
 
 <nav>
   <h1><a href="webseite.html">Meine erste Webseite</a></h1>
@@ -9,6 +9,7 @@
   </ul>
 </nav>
 
+<main>
 <h1>Meine Hobbies</h1>
 
 <ul class="hobbies">
@@ -25,3 +26,4 @@
     <p>Radfahren</p>
   </li>
 </ul>
+</main>
