webseiten incl. copy

--- a/web/public/stundenplan.html
+++ b/web/public/stundenplan.html
@@ -25,58 +25,234 @@
     <tbody>
       <tr>
         <td>
-          8:00
+          8:00 - 8:45
         </td>
-        <td>Deutsch</td>
+        <td>Englisch</td>
+        <td>Religion</td>
+        <td>Mathematik</td>
         <td>-</td>
-        <td>Mathematik</td>
         <td>Englisch</td>
-        <td>Sport</td>
       </tr>
       <tr>
         <td>
-          8:45
+          8:45 - 9:30
         </td>
-        <td>Deutsch</td>
+        <td>Sachunterricht</td>
         <td>Religion</td>
         <td>Mathematik</td>
-        <td>Englisch</td>
-        <td>Sport</td>
+        <td>Mathematik</td>
+        <td>Mathematik</td>
       </tr>
       <tr>
-        <td>9:30</td>
+        <td>9:30 - 9:50</td>
         <td colspan="5">Pause</td>
       </tr>
       <tr>
-        <td>9:45</td>
-        <td>Sachunterricht</td>
-        <td>Kunst</td>
+        <td>9:50 - 10:35</td>
+        <td>Sport</td>
         <td>Deutsch</td>
-        <td>Kunst</td>
         <td>Deutsch</td>
-      </tr>
-      <tr>
-        <td>10:30</td>
-        <td>Sachunterricht</td>
-        <td>Kunst</td>
-        <td>Sachunterricht</td>
-        <td>Kunst</td>
+        <td>Mathematik</td>
         <td>Deutsch</td>
       </tr>
       <tr>
-        <td>11:15</td>
+        <td>10:35 - 11:20</td>
+        <td>Sport</td>
+        <td>Deutsch</td>
+        <td>Deutsch</td>
+        <td>Musik</td>
+        <td>Deutsch</td>
+      </tr>
+      <tr>
+        <td>11:20 - 12:00</td>
         <td colspan="5">Pause</td>
       </tr>
       <tr>
         <td>
-          11:45
+          12:00 - 12:45
         </td>
         <td>Deutsch</td>
-        <td>Religion</td>
-        <td>Mathematik</td>
-        <td>Englisch</td>
-        <td>Sport</td>
+        <td>Deutsch</td>
+        <td>Sachunterricht</td>
+        <td>Schwimmen</td>
+        <td>Kunst</td>
+      </tr>
+      <tr>
+        <td>
+          12:45 - 13:30
+        </td>
+        <td>Musik</td>
+        <td>Sachunterricht</td>
+        <td></td>
+        <td>Schwimmen</td>
+        <td>Kunst</td>
+      </tr>
+      <tr>
+        <td colspan="6">Meine Nachmittage</td>
+      </tr>
+      <tr>
+        <td>14:00</td>
+        <td></td>
+        <td>Computer AG</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>15:00</td>
+        <td></td>
+        <td>Geige</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>15:50</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Tanzen</td>
       </tr>
     </tbody>
   </table>
 </main>
+
+
+
+<button class="btn" id="copy">HTML kopieren</button>
+
+<textarea style="width: 100%; height: 45em; display: none;">
+  &lt;link rel="stylesheet" href="/styles.css" /&gt;
+
+  &lt;nav&gt;
+    &lt;h1&gt;&lt;a href="webseite.html"&gt;Meine erste Webseite&lt;/a&gt;&lt;/h1&gt;
+    &lt;ul&gt;
+      &lt;li&gt;&lt;a href="hobbies.html"&gt;Hobbies&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href="stundenplan.html"&gt;Stundenplan&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/nav&gt;
+
+  &lt;main&gt;
+    &lt;h1&gt;Mein Stundenplan&lt;/h1&gt;
+
+    &lt;table&gt;
+      &lt;thead&gt;
+        &lt;tr&gt;
+          &lt;th&gt;&lt;/th&gt;
+          &lt;th&gt;Montag&lt;/th&gt;
+          &lt;th&gt;Dienstag&lt;/th&gt;
+          &lt;th&gt;Mittwoch&lt;/th&gt;
+          &lt;th&gt;Donnerstag&lt;/th&gt;
+          &lt;th&gt;Freitag&lt;/th&gt;
+        &lt;/tr&gt;
+      &lt;/thead&gt;
+      &lt;tbody&gt;
+        &lt;tr&gt;
+          &lt;td&gt;
+            8:00 - 8:45
+          &lt;/td&gt;
+          &lt;td&gt;Englisch&lt;/td&gt;
+          &lt;td&gt;Religion&lt;/td&gt;
+          &lt;td&gt;Mathematik&lt;/td&gt;
+          &lt;td&gt;-&lt;/td&gt;
+          &lt;td&gt;Englisch&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;
+            8:45 - 9:30
+          &lt;/td&gt;
+          &lt;td&gt;Sachunterricht&lt;/td&gt;
+          &lt;td&gt;Religion&lt;/td&gt;
+          &lt;td&gt;Mathematik&lt;/td&gt;
+          &lt;td&gt;Mathematik&lt;/td&gt;
+          &lt;td&gt;Mathematik&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;9:30 - 9:50&lt;/td&gt;
+          &lt;td colspan="5"&gt;Pause&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;9:50 - 10:35&lt;/td&gt;
+          &lt;td&gt;Sport&lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+          &lt;td&gt;Mathematik&lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;10:35 - 11:20&lt;/td&gt;
+          &lt;td&gt;Sport&lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+          &lt;td&gt;Musik&lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;11:20 - 12:00&lt;/td&gt;
+          &lt;td colspan="5"&gt;Pause&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;
+            12:00 - 12:45
+          &lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+          &lt;td&gt;Deutsch&lt;/td&gt;
+          &lt;td&gt;Sachunterricht&lt;/td&gt;
+          &lt;td&gt;Schwimmen&lt;/td&gt;
+          &lt;td&gt;Kunst&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;
+            12:45 - 13:30
+          &lt;/td&gt;
+          &lt;td&gt;Musik&lt;/td&gt;
+          &lt;td&gt;Sachunterricht&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;Schwimmen&lt;/td&gt;
+          &lt;td&gt;Kunst&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td colspan="6"&gt;Meine Nachmittage&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;14:00&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;Computer AG&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;15:00&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;Geige&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+        &lt;/tr&gt;
+        &lt;tr&gt;
+          &lt;td&gt;15:50&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;/td&gt;
+          &lt;td&gt;Tanzen&lt;/td&gt;
+        &lt;/tr&gt;
+      &lt;/tbody&gt;
+    &lt;/table&gt;
+  &lt;/main&gt;
+</textarea>
+
+<script>
+  var copyButton = document.getElementById('copy');
+  copyButton.addEventListener('click', function() {
+    var text = document.querySelector('textarea');
+    text.select();
+    navigator.clipboard.writeText(text.value);
+    copyButton.innerHTML = 'HTML kopiert!';
+    setTimeout(function() {
+      copyButton.innerHTML = 'HTML kopieren';
+    }, 2000);
+  });
+</script>
