--- a/web/public/hobbies.html
+++ b/web/public/hobbies.html
@@ -3,9 +3,8 @@
 <nav>
   <h1><a href="webseite.html">Meine erste Webseite</a></h1>
   <ul>
-    <li><a href="hobbies.html">Meine Hobbies</a></li>
-    <li><a href="faecher.html">Meine Lieblingsfächer</a></li>
-    <li><a href="stundenplan.html">Mein Stundenplan</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="stundenplan.html">Stundenplan</a></li>
   </ul>
 </nav>
 
@@ -27,3 +26,50 @@
   </li>
 </ul>
 </main>
+
+
+<button class="btn" id="copy">HTML kopieren</button>
+
+<textarea style="width: 100%; height: 45em; display: none;">
+  &lt;link rel="stylesheet" href="/styles.css" /&gt;
+
+  &lt;nav&gt;
+    &lt;h1&gt;&lt;a href="webseite.html"&gt;Meine erste Webseite&lt;/a&gt;&lt;/h1&gt;
+    &lt;ul&gt;
+      &lt;li&gt;&lt;a href="hobbies.html"&gt;Hobbies&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href="stundenplan.html"&gt;Stundenplan&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/nav&gt;
+
+  &lt;main&gt;
+  &lt;h1&gt;Meine Hobbies&lt;/h1&gt;
+
+  &lt;ul class="hobbies"&gt;
+    &lt;li&gt;
+      &lt;img src="gitarre.jpeg" alt="Gitarre" /&gt;
+      &lt;p&gt;Gitarre spielen&lt;/p&gt;
+    &lt;/li&gt;
+    &lt;li&gt;
+      &lt;img src="skifahren.jpeg" alt="Skifahren" /&gt;
+      &lt;p&gt;Skifahren&lt;/p&gt;
+    &lt;/li&gt;
+    &lt;li&gt;
+      &lt;img src="bike.jpeg" alt="E-Bike" /&gt;
+      &lt;p&gt;Radfahren&lt;/p&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+  &lt;/main&gt;
+</textarea>
+
+<script>
+  var copyButton = document.getElementById('copy');
+  copyButton.addEventListener('click', function() {
+    var text = document.querySelector('textarea');
+    text.select();
+    navigator.clipboard.writeText(text.value);
+    copyButton.innerHTML = 'HTML kopiert!';
+    setTimeout(function() {
+      copyButton.innerHTML = 'HTML kopieren';
+    }, 2000);
+  });
+</script>
