--- a/web/public/hobbies.html
+++ b/web/public/hobbies.html
@@ -31,7 +31,7 @@
 <button class="btn" id="copy">HTML kopieren</button>
 
 <textarea style="width: 100%; height: 45em; display: none;">
-  &lt;link rel="stylesheet" href="/styles.css" /&gt;
+  &lt;link rel="stylesheet" href="https://computer-ag.com/styles.css" /&gt;
 
   &lt;nav&gt;
     &lt;h1&gt;&lt;a href="webseite.html"&gt;Meine erste Webseite&lt;/a&gt;&lt;/h1&gt;
@@ -46,15 +46,15 @@
 
   &lt;ul class="hobbies"&gt;
     &lt;li&gt;
-      &lt;img src="gitarre.jpeg" alt="Gitarre" /&gt;
+      &lt;img src="https://computer-ag.com/gitarre.jpeg" alt="Gitarre" /&gt;
       &lt;p&gt;Gitarre spielen&lt;/p&gt;
     &lt;/li&gt;
     &lt;li&gt;
-      &lt;img src="skifahren.jpeg" alt="Skifahren" /&gt;
+      &lt;img src="https://computer-ag.com/skifahren.jpeg" alt="Skifahren" /&gt;
       &lt;p&gt;Skifahren&lt;/p&gt;
     &lt;/li&gt;
     &lt;li&gt;
-      &lt;img src="bike.jpeg" alt="E-Bike" /&gt;
+      &lt;img src="https://computer-ag.com/bike.jpeg" alt="E-Bike" /&gt;
       &lt;p&gt;Radfahren&lt;/p&gt;
     &lt;/li&gt;
   &lt;/ul&gt;
