--- a/web/public/webseite.html
+++ b/web/public/webseite.html
@@ -44,7 +44,7 @@
 <button class="btn" id="copy">HTML kopieren</button>
 
 <textarea style="width: 100%; height: 45em; display: none;">
-&lt;link rel="stylesheet" href="/styles.css" /&gt;
+&lt;link rel="stylesheet" href="https://computer-ag.com/styles.css" /&gt;
 
 &lt;nav&gt;
   &lt;h1&gt;&lt;a href="webseite.html"&gt;Meine erste Webseite&lt;/a&gt;&lt;/h1&gt;
